src/objects/Reconciliation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reconciliations</relationshipLabel>
        <relationshipName>Reconciliations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Credits__c - Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <label>Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Credits__c</columns>
        <columns>Debits__c</columns>
        <columns>Balance__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>